governance-shared/baselines/3.19.0/ChronoPM-Project/references/11-output-artifact-rules.md
# 输出物生成与管理规则

本规则管理 AI 生成的对外文件（周报、时间线报/自然月特例、会议纪要、Excel、Word、PDF 等），明确生成物与事实源的边界。

---

## 1. 输出物定义

| 类型 | 说明 | 就是/并不是 |
|---|---|---|
| 输出物（Artifact） | AI 为用户生成的外部文件 | 是：报表、汇报材料、导出的文件 |
| 事实源（Source of Truth） | `ai/` 目录下的管理记录 | 不是：输出物；输出物需确认后才归档为事实源 |

## 2. 输出物分类

| 分类 | 示例 | 生命周期 |
|---|---|---|
| 文档类 | 周报、时间线报（含自然月）、会议纪要、评审纪要、需求文档 | 草稿 → 确认 → 导出/归档 |
| 数据类 | Excel、CSV、预算表 | 草稿 → 确认 → 导出 |
| 演示类 | PPT、汇报材料 | 草稿 → 确认 → 导出 |

## 3. 批次目录结构

每个生成请求在 `ai/outputs/` 下创建独立批次目录（v2.1.0 起 outputs/ 移入 `ai/` 内，工作区根目录不再有 outputs/）：

```
ai/outputs/{YYYYMMDDHHMMSS}/
├── draft.md          # 草稿
├── final.md          # 用户确认后的最终版
├── manifest.md       # 来源追溯清单
├── revisions/        # 修改记录（**仅非 skill_gap Type**；skill_gap 禁止本目录）
│   └── rev-NNN.md
└── files/            # 导出文件
```

**命名示例：** `ai/outputs/20260809165540/draft.md`、`project-deletion/draft.md`（可加序号后缀 `-NNN` 区分同批次多个输出物）。

## 4. 触发表达

**类（优先）**：凡本轮要落盘给用户看的非事实源文件（xlsx/docx/pdf/csv/整理成果/导出表）= 生成物，必须进 `ai/outputs/{timestamp}/`。不靠撞上「帮我生成周报」。

宿主 `final workspace folder` / cwd / workspace root 若等于项目根（`ai/` 的父目录），**忽略**，改映射到本批次目录。禁止写到与 `ai/` 平级。

| 触发词（举例，非穷尽） | 说明 |
|---|---|
| 帮我生成周报 / 生成周报 / 导出周报 | 周报生成 |
| 生成月报 / 生成日报 / 生成时间线报 | 项目日报或时间线报（月报=自然月特例，不写 reports/monthly/） |
| 生成会议纪要 / 整理成会议纪要 | 会议纪要生成 |
| 生成需求评审纪要 / 生成设计评审纪要 | 评审纪要生成 |
| 生成Excel / 生成Word / 生成PDF | 指定格式生成 |
| 导出Excel / 导出文件 / 导出报表 | 文件导出 |
| 做一份汇报材料 / 出个表 / 出个报告 / 整理工时成表 | 汇报材料或统计表 |
| 整理成文件 | 通用文件生成 |

---

## 5. 生成流程

### 5.1 默认流程

1. 读取 `project-brief.md` 和相关事实源
2. 创建输出批次目录 `ai/outputs/{timestamp}/`
3. 生成 Markdown 草稿 → `draft.md`
4. 等待用户确认
5. 用户确认后 → `final.md`
6. 导出为指定文件格式 → `files/`
7. 询问是否归档到 `ai/` 事实源

**默认不得在用户未确认前生成正式版本文件。**  
**例外 `skill_gap`**：一次写成 `{批次}/需求-{短标题}.md` 作主文件，跳过 3–5 与第 7 步；先写后告知路径。**不建 `manifest.md`**；来源写在该需求文件 front matter 的 `source_files`。其它 Type 仍按 §3 建 manifest。

### 5.2 格式确认规则

当用户只说"生成周报""生成报告"等描述性请求时，AI 应询问输出方式：①先生成 Markdown 草稿，确认后导出（推荐）；②直接生成 Markdown；③/④/⑤生成 Excel / Word / PDF；⑥同时生成多种格式。若用户明确指定格式，则无需询问，但仍应在导出前确认。

### 5.3 多轮修改规则

同一次生成请求的多轮修改**必须复用同一个批次目录**。例如"帮我生成周报"创建 `ai/outputs/20260809165540/`，后续"压缩风险部分""调整结构"等修改均写入 `ai/outputs/20260809165540/revisions/rev-NNN.md`。**不得为普通修改创建新的时间戳批次目录**；仅当用户明确说"重新生成"或"另出一版"时才新建批次目录。

**例外 `Type=skill_gap`**：禁止 `revisions/rev-NNN.md`。同指纹原位更新主文档 + 文内「八、迭代记录」。见 `skill-gap-skill/references/gap-capture-rules.md`。

### 5.4 修改时的文件处理

- 修改草稿阶段（**非 skill_gap**）：只更新 `draft.md` + 追加 `revisions/rev-NNN.md`，不重新生成 `files/` 下文件。
- 用户确认后：写入 `final.md`，再生成/覆盖 `files/` 下文件。

---

## 6. 输出状态

| 状态 | 说明 |
|---|---|
| `初稿` | 已生成初稿 |
| `待确认` | 等待用户确认 |
| `修改中` | 用户正在修改 |
| `已定稿` | 内容已确认 |
| `已导出` | 已导出文件 |
| `已归档` | 已归档到 ai/ 事实源 |
| `已取消` | 用户取消 |

---

## 7. 生成物索引

`ai/outputs/index.md` 记录所有生成批次：

| Batch ID | Created At | Request | Type | Status | Main File | Related AI File |
|---|---|---|---|---|---|---|
| 20260809165540 | 2026-08-09 16:55:40 | 帮我生成周报 | weekly_report | draft | ai/outputs/20260809165540/draft.md | pending |

`Type=skill_gap`：主文件必须是 `{批次}/需求-{短标题}.md`，**不走** draft.md→final.md，**不建 manifest.md**，**禁止 `revisions/rev-NNN.md`**。登记后禁止问是否归档进事实源。同指纹未并入 → 原位更新主文档 + 第八节迭代记录（无 7 日窗）；用户另出一版才新开批次。Status 取值可含「已废弃」。编号 `SG-YYYYMMDD-NNN` 取当日本 Type 最大号 +1。细则只认 gap-capture-rules。

每次创建、修改、导出或归档输出物时，必须同步更新 `ai/outputs/index.md`。

---

## 8. 来源追溯

除 `Type=skill_gap` 外，所有生成物必须在 `manifest.md` 中记录来源文件（如本项目周报来自本项目日报/待办/风险/问题等）。skill_gap 的来源写在需求文件 YAML `source_files`。跨项目汇总周报请到 ChronoPM-Portfolio 对话生成，本包不以其为归档目标。**不得生成无来源记录的正式文件。**

---

## 9. 事实源边界

| 目录 | 存什么 | 性质 |
|---|---|---|
| `ai/` | 事实源、规则、模板、项目管理记录 | 事实源（需确认更新） |
| `ai/outputs/` | 生成的文档、Excel、Word、PDF、草稿、导出结果 | 生成物（草稿可自由迭代） |
| 业务子项目目录 | 业务代码、原始业务资料、交付物 | 业务文件（不侵入） |

> v2.1.0 起 `outputs/` 位于 `ai/` 目录内（`ai/outputs/`），但其性质仍是生成物而非事实源：生成物不得作为任何查询/聚合的数据源。

**生成报告 ≠ 更新事实源。** 默认先生成 `ai/outputs/` 草稿，用户确认后再询问是否归档到 `ai/` 事实源目录。**例外**：`Type=skill_gap` 禁止询问归档进事实源，永不写入 requirements/wps/plans。

---

## 10. 归档规则

| 内容类型 | 归档路径 |
|---|---|
| 本项目周报 | `reports/weekly/{year}/` |
| 集周报 / 跨项目周报 | 集周报请到 ChronoPM-Portfolio 对话（本包不归档到 `portfolio/reports/`） |
| 本项目会议纪要 | `meetings/{year}/` |
| 跨项目会议纪要 | 本项目相关部分归档到 `meetings/{year}/`；跨项目汇总请到 ChronoPM-Portfolio |
| 需求评审纪要 | `meetings/{year}/` 或 `reviews/` |
| 设计评审纪要 | `reviews/` |
| P&L 导出 | `ai/outputs/`（必要时更新本项目 `project-info/budget.md`） |

归档时必须询问用户确认，给出目标路径（如 `reports/weekly/2026/2026-W33-项目周报.md`）。

---

## 11. 确认规则

生成物确认同属对外确认场景，话术见 `00-pm-main-rules.md` **对外确认专节**（本文件不复述）：禁止对用户甩内部路径/编号/工序名；「请你确认」只=认不认或准不准。

| 操作 | 是否需要确认 |
|---|---|
| 创建输出批次目录 | 不需要 |
| 生成 Markdown 草稿 | 不需要 |
| 多轮修改草稿 | 不需要 |
| 导出 Excel/Word/PDF | 需要确认（除非用户明确指定格式） |
| 归档到 ai/ 事实源 | 必须确认 |
| 覆盖已有输出文件 | 必须确认 |
| 删除或取消输出批次 | 必须确认 |
| 修改 final.md | 不允许（应创建新批次） |

---

## 12. 未确认处理

用户长期未确认时，输出批次保持 `待确认` 状态，不自动删除。AI 可在后续查询中提示存在未确认批次（列出 Batch ID/类型/创建时间/状态）并询问"是否继续处理或取消？"。

---

## 13. 文件命名规则

### 13.1 输出批次目录

`ai/outputs/{YYYYMMDDHHMMSS}/`；需区分序号时用 `ai/outputs/{YYYYMMDDHHMMSS}-NNN/`。

### 13.2 导出文件命名

格式：`{scope}-{document_type}-{period_or_date}-{version}.{ext}`

| 字段 | 说明 | 示例 |
|---|---|---|
| scope | 本项目名称 | 如：全链通重构 |
| document_type | 文档类型 | 周报 / 时间线报 / 需求评审纪要 |
| period_or_date | 周期或日期 | 2026-W33 / 20260809 |
| version | 版本号 | v0.1 / v1.0 |

### 13.3 版本规则

| 版本 | 含义 |
|---|---|
| `v0.1` | 初稿 |
| `v0.2` | 修改稿 |
| `v1.0` | 用户确认版 |
| `v1.1` | 确认后小修 |

---

## 14. 环境兼容规则

若当前环境不具备文件写入或 Excel/Word/PDF 生成能力，AI 应：①不假装已生成文件；②输出目标路径、文件名和文件内容；③提供替代方案（CSV 内容、Python openpyxl 脚本、Excel 表结构定义、可复制到 Excel 的 Markdown 表格）。

---

## 15. 与 10-update-trigger-rules 的关系

| 规则 | 负责什么 |
|---|---|
| `10-update-trigger-rules.md` | 识别"要不要更新事实源"（→ `ai/`） |
| `11-output-artifact-rules.md` | 识别"要不要生成外部文件/导出物"（→ `ai/outputs/`） |

**示例：** "记录一下，陈佳菁被抽调" → 触发 `10`（更新事实源）；"帮我生成周报" → 触发 `11`（生成输出物）；"帮我生成本周项目集周报，并归档" → 提示到 ChronoPM-Portfolio 对话（本包只生成本项目周报）。

## 16. 存储生命周期

`ai/outputs/` 目录瘦身：
- 触发：`ai/outputs/index.md` >100 行 或 目录 >50 个批次
- 动作：将 >90 天且状态为 `已定稿`/`已导出` 的批次移动到 `ai/outputs/archive/YYYY/`
- 状态为 `待确认` 的批次不自动归档（保留现有规则）
- 归档后更新 `ai/outputs/index.md`：归档条目标记为 `[已归档→路径]`

`ai/outputs/index.md` 自身瘦身：
- >200 行时，将 >180 天的已归档条目移至 `ai/outputs/archive/index-archive.md`

---

## 17. Index 派生 Mermaid 图（v3.19.0）

### 17.1 定位

派生视图，非事实源、非生成物。数据源：`wps/_index.md`（进行中段）+ 各 `wps/WP-*.md`（名称、plan_ref、§1 日期、§8 当前 🔄 阶段、related_wps）。

**3.16 A6 反转（唯一例外）**：允许懒建 **一份** `wps/_wp-chart.md`。禁止写入 `ai/outputs/`，不走 P-OUTPUT，不建批次，不登记 `outputs/index`。禁止手改当真相（下次按数据覆盖）。

对话仍可输出 Mermaid 代码块。盘上有图则顺带给文件链接。

### 17.2 默认输出（按计划分章）

未点名其它图时，按 **正常计划** 分 Markdown 章节，每章一个独立 `mermaid`（**不是**一个大 subgraph 框住所有计划）。

- 章节名 = 计划编号 + `：` + 计划名称。另加一章 `未绑定计划`（`plan_ref` 空或不含任何正常 PLAN）。
- 一包多个 `plan_ref`：每个相关章节都有该节点。
- 只纳入 `effect=正常` 且头 status ≠ `已完成` 的 WP（进行中段）。**废弃包、已完成归档强制不入默认图。**
- 图声明必须 `graph TD`。排列按本章 `related_wps`（两端都在本章）无向连通分量，**不是**统一每行 3 个。
- **有关联**（分量 ≥ 2）：横向。≤3 单行子图；>3 换行，规格见 **§17.2.1**。
- **无关联**（分量 = 1，含对端不在本章的包）：全部装入同一个隐形子图 `rInd`（标题「独立（无关联绑定）」）+ `direction LR`，TD 下同列纵堆。禁止把无关联包装进每行 3 个的折行。
- 每个分组一个 `direction LR` 隐形子图：`style <id> fill:none,stroke:none,stroke-width:0px`。链与链、链与 `rInd` 之间不画任何边。
- 节点四行 `<br/>`：编号 / 名称 / `yyyy-MM-DD ~ yyyy-MM-DD`（缺则 `— ~ —`，能补全则补全，不改 WP 文件）/ 阶段身份图标+当前阶段名。
- 当前阶段 = §8 状态为 🔄 的行名；无 🔄 则最后一个 ✅ 之后第一个 ⏳；全 ⏳ → 需求登记；全 ✅ → 上线。
- **不显示人员。** 人员图仅点名才出。
- 边只来自 YAML `related_wps`，且 **两端都在本章**。对端不在本章 → 本章不画该边，该包归独立集。禁止推断边。
- 阶段身份图标：需求登记 🔄 / 需求调研 🔍 / 需求规划 📋 / 需求评审 📝 / 需求确认 ✔️ / 方案设计 🏗️ / 用例设计 📐 / 开发 💻 / 预演 🎭 / 测试 🧪 / 内部验收 ✅ / 试运行 🚀 / 上线 🎯（与 §8 三态图标分离：节点写 `🧪 测试` 不单写状态 🔄）。
- **结构闸**（写后必过，禁止只核源码语法就宣称排列正确）：有关联行内节点同 y 且 x 递增（源码：`direction LR` + 行内真实边）；各行子图声明后紧跟隐形 style；换行有子图级边+标签；无关联只在 `rInd`。宿主能渲染则截图/坐标取证；不能则明示「本宿主无法截图，已做结构验收」。

### 17.2.1 超长链换行规格（A～F，强制）

**A. 触发与切行**

- A1. 同一关联分量节点数 **> 3** 时换行；≤ 3 时单行子图（标题「链N」）、不画行间边。
- A2. 按拓扑序（前置在前）切行，每行最多 3 个；末行允许短行（4=3+1，5=3+2，7=3+3+1）。
- A3. 分支随拓扑序；一行放不下则整支顺延，禁止把同一前置的并列后置拆到两行。

**B. 结构骨架**

- B1. `graph TD`
- B2. 每行：`subgraph chain{链号}r{行号} ["链{链号}·第{行号}行"]`，体内首行 `direction LR`
- B3. 行内真实边照画（节点级，不跨行）：`A --> B --> C`
- B4. 每个子图声明后立刻 `style chain1r1 fill:none,stroke:none,stroke-width:0px`
- B5. 声明顺序 = 行序（第 1 行先声明）
- B6. 同章多链：chain1/chain2/…；链与链、链与独立子图之间不画边

**C. 行间连线与标签**

- C1. 相邻行必须一条子图级边：`chain1r1 -->|"标签"| chain1r2`；不相邻不画（逐行串联）
- C2. 标签 = 该切行处全部跨行依赖对，格式 `WP-XXX→WP-YYY`，多对顿号：`|"WP-003→WP-004、WP-001→WP-005"|`
- C3. 标签必写。线的两端是子图不是节点，「从哪个 WP 接出」只存在于标签
- C4. 视觉起点可能在子图边框中部，属 dagre 行为；节点语义以标签为准

**D. 红线**

- D1. **禁止**跨行节点级边（如跨子图 `C --> D`）：TD 下毁掉 LR 横排；LR 下第 2 行被拉到右侧不换行
- D2. 禁止 `~~~` 等排版线承载跨行依赖
- D3. 禁止行间零连线
- D4. 子图级边是排版结构：禁止计入指纹、禁止当关联证据（真实关联只认 WP 文件 `related_wps`）

**E. 引擎限制**

- E1. dagre 下「行内横排 / 行间换行 / 节点级跨行边」三者互斥只能取二；本规格取横排+换行，用标签补节点语义
- E2. 已证伪：LR+节点级跨行边（不换行）；TD+节点级跨行边（横排丢失）；LR 无边分块（行间零连线）；ELK（不稳）；节点徽标续接；节点→子图 / 子图→节点混合边
- E3. 子图级边端点绑子图边框不绑节点；第 2 行子图整体居中——无法配置
- E4. 根因：子图内任何节点有边连到子图外 → 该子图 `direction` 被忽略、继承外层方向。行内弧线许可条件 = 边不出子图；换行依赖天然跨界，拿不到该许可
- E5. 行内真实边（含分支弧线）不受影响。判定只看边的两端是否都在同一行子图内

**F. 图注与验证**

- F1. 换行图必写图注：`完整链序：WP-001→…→WP-00N（超 3 换行，跨行依赖已标注在行间连线上）`
- F2. 生成后必须渲染验证（截图或坐标取证）；无渲染器则走 17.2 结构闸并明示。验收：行内同 y 且 x 递增、各行 y 递增、行间边标签文本出现

作废：`graph LR` 无边分块倒序声明；`~~~` 排版线；ELK。若未来确需排版线：禁止计入指纹、禁止当关联证据、图头必须注明。

点名才出（同样禁止编造边）：

| 图类型 | 数据源 | Mermaid 类型 |
|---|---|---|
| 计划→WP 结构图 | PLAN §3 + wps/_index | graph TD |
| 人员×待办排布图 | todos/_index §1 + §3 | graph LR |
| 含已完成 | index 已完成归档段 | 独立章节，非默认 |

### 17.3 落盘与指纹

模板：`assets/templates/wp-chart-template.md`。缺文件则懒建。

指纹（字段集合相等则不重写）：每个入图 WP 的 `(编号, 名称, plan_ref 排序, 开始日, 结束日, 当前阶段名, upstream 排序, downstream 排序, effect)`。不含人员。**子图级跨行边属于排版，禁止计入指纹、禁止当关联证据。** 改备注/关联记录/状态历史/§8b 不在指纹内。

触发：新建/删除/废弃 WP，改 related_wps、包名、plan_ref、§1 日期、§8 当前阶段，或完成归档导致移出图，且指纹变化。同回合先 index 后图。写入链路见 10 L3 与 00 §8c，属 AUTO，不靠用户再喊画图。

### 17.4 触发

用户显式请求（「画图 / 排布图 / 责任链图 / Mermaid / 工作包总览」）。写入联动按 17.3。生成时读最新 index，不缓存。

路由：SKILL.md「画图」行必须加载 **05+11**。写入场景图联动走 00 §8c + 23 P-WP-CHART。WP 创建必载 23。
